--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="index.js"></script>
+    <script src="./canvas.js"></script>
 </body>
 </html>
